syntax = "proto3";


// Define the ScopeSettings message
message ScopeSettings {
    // Define fields for ScopeSettings
    string scope_name = 1;
}

// Define the RedirectURI message
message RedirectURI {
    // Define fields for RedirectURI
    string uri = 1;
}

// Define the TokenAttributeSettings message
message TokenAttributeSettings {
    // Define fields for TokenAttributeSettings
    string attribute_name = 1;
}

message OidcClientPrt {
    string name = 1;
    string description = 2;
    string idDomain = 3;
    string id = 4;
    string secret = 5;
    string clientType = 6;
    string grantTypes = 7;
    repeated ScopeSettings scopes = 8;
    string usePKCE = 9;
    string defaultScope = 10;
    repeated RedirectURI redirect_uris = 11;
    repeated TokenAttributeSettings attributes = 12;
    string tokenEndpointAuthMethod = 13;
    string issueTLSClientCertificateBoundAccessTokens = 14;
    string tlsClientAuthSubjectDN = 15;
    string tlsClientAuthSANDNS = 16;
    string tlsClientAuthSANURI = 17;
    string tlsClientAuthSANIP = 18;
    string tlsClientAuthSANEmail = 19;
    string accessTokenCustomClaims = 20;
    string idTokenCustomClaims = 21;
    string userInfoCustomClaims = 22;
    int32 oldSecretRetentionTimeInDays = 23;
 }
 